--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <P>hello world</P>
+    <P>hello world.</P>
     <h1>rimjhim</h1>
 </body>
 </html>
